# cmake-swig-java-example

./: CMakeLists.txt  README.md  Triangle.java  example.cpp  example.hpp  example.i  example_test.java  java_bundle.sh  make.sh
example/: NativeLib.java
